--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -45,7 +45,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/space_grotesk_bold"
-                android:text="To make a donation, follow these steps :"
+                android:text="For making a donation, follow these steps :"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -56,8 +56,8 @@
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginStart="6dp"
+                android:layout_marginTop="8dp"
                 android:fontFamily="@font/space_grotesk_regular"
                 android:padding="5dp"
                 android:text="1. Tap on the DONATE button."
@@ -70,7 +70,7 @@
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
+                android:layout_marginStart="6dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/space_grotesk_regular"
                 android:padding="5dp"
@@ -84,7 +84,7 @@
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
+                android:layout_marginStart="6dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/space_grotesk_regular"
                 android:padding="5dp"
@@ -98,13 +98,12 @@
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="6dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/space_grotesk_regular"
                 android:padding="5dp"
                 android:text="4. Enter the food item, your phone number, and a short description."
                 android:textColor="@color/black"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView9"
                 tools:ignore="HardcodedText" />
@@ -113,7 +112,7 @@
                 android:id="@+id/textView11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
+                android:layout_marginStart="6dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/space_grotesk_regular"
                 android:padding="5dp"
@@ -127,25 +126,24 @@
                 android:id="@+id/textView12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="6dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/space_grotesk_regular"
                 android:padding="5dp"
                 android:text="6. After submitting, wait for an interested receiver to contact you."
                 android:textColor="@color/black"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView11"
                 tools:ignore="HardcodedText" />
 
             <TextView
-                android:id="@+id/tv13"
+                android:id="@+id/textView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/space_grotesk_bold"
-                android:text="To receive a donation, follow these steps :"
+                android:text="For receiving a donation, follow these steps :"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -153,107 +151,102 @@
                 tools:ignore="HardcodedText" />
 
             <TextView
-                android:id="@+id/tv14"
+                android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
+                android:layout_marginStart="6dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/space_grotesk_regular"
                 android:padding="5dp"
                 android:text="1. Tap on Donations."
                 android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv13"
+                app:layout_constraintTop_toBottomOf="@+id/textView1"
                 tools:ignore="HardcodedText" />
 
             <TextView
-                android:id="@+id/tv15"
+                android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="6dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/space_grotesk_regular"
                 android:padding="5dp"
                 android:text="2. Check available donations. If available, you’ll see an option to call the donor."
                 android:textColor="@color/black"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv14"
+                app:layout_constraintTop_toBottomOf="@+id/textView2"
                 tools:ignore="HardcodedText" />
 
             <TextView
-                android:id="@+id/tv16"
+                android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="6dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/space_grotesk_regular"
                 android:padding="5dp"
                 android:text="3. Go to the Home screen and tap on RECEIVE. Choose the food type and tap the call icon."
                 android:textColor="@color/black"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv15"
+                app:layout_constraintTop_toBottomOf="@+id/textView3"
                 tools:ignore="HardcodedText" />
 
             <TextView
-                android:id="@+id/textView13"
+                android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="6dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/space_grotesk_regular"
                 android:padding="5dp"
                 android:text="4. Check the donor's location on the map. The green marker shows the donor’s location; red is yours. Tap on the donor’s marker and open Google Maps for directions."
                 android:textColor="@color/black"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv16"
+                app:layout_constraintTop_toBottomOf="@+id/textView4"
                 tools:ignore="HardcodedText" />
 
             <TextView
                 android:id="@+id/textView14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="6dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/space_grotesk_regular"
                 android:padding="5dp"
                 android:text="5. Return to the app and call the donor. Agree on a pickup point for the donation."
                 android:textColor="@color/black"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView13"
+                app:layout_constraintTop_toBottomOf="@+id/textView5"
                 tools:ignore="HardcodedText" />
 
             <TextView
                 android:id="@+id/textView15"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="6dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/space_grotesk_regular"
                 android:padding="5dp"
                 android:text="6. Once you've successfully contacted the donor, mark the donation as received. Do not mark it before contacting them."
                 android:textColor="@color/black"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView14"
                 tools:ignore="HardcodedText" />
 
             <TextView
+                android:id="@+id/textView16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="6dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:fontFamily="@font/space_grotesk_bold"
                 android:padding="5dp"
-                android:text="Note: Use the Food Map to view all available donations around you."
+                android:text="Note : Use the Food Map to view all available donations around you."
                 android:textColor="@color/black"
-                android:textSize="16sp"
+                android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView15"
                 tools:ignore="HardcodedText" />
