--- a/app/src/main/res/layout/donation_item.xml
+++ b/app/src/main/res/layout/donation_item.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/foodItemName"
+            android:id="@+id/donation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -29,12 +29,12 @@
             android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="5dp"
             android:fontFamily="@font/space_grotesk_regular"
             android:text="Description"
             android:textSize="14sp"
-            app:layout_constraintStart_toStartOf="@+id/foodItemName"
-            app:layout_constraintTop_toBottomOf="@+id/foodItemName"
+            app:layout_constraintStart_toStartOf="@+id/donation"
+            app:layout_constraintTop_toBottomOf="@+id/donation"
             tools:ignore="HardcodedText" />
 
         <TextView
@@ -45,8 +45,7 @@
             android:text=""
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/foodItemName" />
-
+            app:layout_constraintTop_toTopOf="@+id/donation" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
