--- a/app/src/main/res/layout/fragment_about_us.xml
+++ b/app/src/main/res/layout/fragment_about_us.xml
@@ -82,6 +82,7 @@
                     android:layout_marginBottom="24dp"
                     android:fontFamily="@font/space_grotesk_regular"
                     android:text="NourNet exists to turn surplus food into shared hope. Our goal is to create a space where everyday people can start and sustain efforts to feed the needy and minimize food waste in their communities."
+                    android:textAlignment="center"
                     android:textColor="@color/black"
                     android:textSize="15sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -105,11 +106,11 @@
             tools:ignore="HardcodedText" />
 
         <View
-            android:layout_width="80dp"
+            android:layout_width="72dp"
             android:layout_height="2dp"
-            android:layout_gravity="center"
             android:layout_marginTop="5dp"
-            android:background="#D3D3D3" />
+            android:layout_gravity="center"
+            android:background="#D3D3D3"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -136,6 +137,5 @@
                 android:src="@drawable/ic_twitter"
                 tools:ignore="ContentDescription" />
         </LinearLayout>
-
     </LinearLayout>
 </ScrollView >
