--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -22,7 +22,7 @@
             android:id="@+id/profile"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:padding="15dp"
+            android:padding="12dp"
             android:src="@drawable/ic_customer_service"
             tools:ignore="ContentDescription" />
 
@@ -31,8 +31,6 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColorHint="@color/black"
-            app:hintTextColor="@color/black"
             app:boxStrokeColor="@color/orange">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -40,16 +38,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:backgroundTint="@android:color/transparent"
                 android:fontFamily="@font/space_grotesk_regular"
-                android:textSize="20sp"
-                android:inputType="text"
                 android:hint="Username"
+                android:importantForAutofill="no"
+                android:inputType="text"
+                android:singleLine="true"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
-                android:backgroundTint="@android:color/transparent"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:importantForAutofill="no"
+                android:textSize="16sp"
                 tools:ignore="HardcodedText,UnusedAttribute" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -59,8 +56,6 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColorHint="@color/black"
-            app:hintTextColor="@color/black"
             app:boxStrokeColor="@color/orange">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -68,45 +63,42 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:textSize="20sp"
-                android:inputType="textEmailAddress"
+                android:backgroundTint="@android:color/transparent"
                 android:fontFamily="@font/space_grotesk_regular"
-                android:hint="@string/email_address"
+                android:hint="Email"
+                android:importantForAutofill="no"
+                android:inputType="textEmailAddress"
+                android:singleLine="true"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
-                android:backgroundTint="@android:color/transparent"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:importantForAutofill="no"
-                tools:ignore="UnusedAttribute" />
+                android:textSize="16sp"
+                tools:ignore="HardcodedText,UnusedAttribute" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/description_error"
+            android:id="@+id/descriptionError"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:textColorHint="@color/black"
-            app:hintTextColor="@color/black"
-            android:textSize="20sp"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:hint="@string/description"
-            app:boxStrokeColor="@color/orange">
+            android:hint="Description"
+            app:boxStrokeColor="@color/orange"
+            tools:ignore="HardcodedText">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:textSize="20sp"
+                android:backgroundTint="@android:color/transparent"
                 android:fontFamily="@font/space_grotesk_regular"
+                android:importantForAutofill="no"
                 android:inputType="textMultiLine"
                 android:maxLines="10"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
-                android:backgroundTint="@android:color/transparent"
-                android:importantForAutofill="no"
+                android:textSize="16sp"
                 tools:ignore="UnusedAttribute" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -118,12 +110,12 @@
             android:layout_margin="20dp"
             android:backgroundTint="@color/orange"
             android:fontFamily="@font/space_grotesk_regular"
-            android:text="@string/submit"
+            android:text="Submit"
             android:textAllCaps="true"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textSize="16sp"
             app:cornerRadius="8dp"
-            tools:ignore="UnusedAttribute" />
+            tools:ignore="HardcodedText,UnusedAttribute" />
 
     </LinearLayout>
 </LinearLayout>
