--- a/app/src/main/res/layout/receive_row_layout.xml
+++ b/app/src/main/res/layout/receive_row_layout.xml
@@ -24,7 +24,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/donatedFoodItem"
+            android:id="@+id/donation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -37,7 +37,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/donatedFoodItemDescription"
+            android:id="@+id/description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -49,7 +49,7 @@
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/donatedFoodItem" />
+            app:layout_constraintTop_toBottomOf="@+id/donation" />
 
         <ImageView
             android:id="@+id/donorPhoneNumber"
